<resources>
    <string name="app_name">beer_talker</string>
    <string name="shopping_storage_text_title">购物车</string>
    <string name="shopping_storage_text_edit">编辑</string>
    <string name="shopping_storage_all_select_text">全选</string>
    <string name="shopping_storage_commit">提交</string>
    <string name="login_username_txt">账户</string>
    <string name="login_msg_username_txt">请输入账号</string>
    <string name="login_password_btx">密码</string>
    <string name="login_msg_password_txt">请输入密码</string>
    <string name="login_msg_help_txt">登录遇到问题</string>
    <string name="login_register_txt">注册</string>
    <string name="login_login_txt">登录</string>
    <string name="login_msg_fail_txt">登录失败</string>
    <string name="login_remember_txt">记住密码</string>
    <string name="login_msg_phone_txt">手机号</string>
    <string name="register_phone_hint_txt">请输入手机号</string>
    <string name="register_get_code_txt">获取验证码</string>
    <string name="home_index">首页</string>
    <string name="home_find">发现</string>
    <string name="home_personal">个人中心</string>
    <string name="home_help_txt">关于酒类,我们能帮你做什么?</string>
    <string name="home_guid_mode_txt">向导模式</string>
    <string name="home_search_txt">立即查询</string>

    <!--二维码-->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_back">返回</string>
    <!--二维码-->
</resources>
