<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/home_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/home_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            style="@style/home_radio_btn"
            android:text="@string/home_index"/>

        <RadioButton
            style="@style/home_radio_btn"
            android:text="@string/home_find"/>

        <RadioButton
            style="@style/home_radio_btn"
            android:text="@string/home_personal"/>
    </RadioGroup>
</LinearLayout>