<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_msg_user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/login_username_txt"
        android:textColor="@color/text_color_black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:textSize="18sp"
        android:hint="@string/login_msg_username_txt"/>

    <ImageView
        android:id="@+id/login_clear_name_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_msg_user_txt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_clear_btn"
        android:clickable="true"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/login_msg_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username_edit"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/text_color_black"
        android:text="@string/login_password_btx"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:textSize="18sp"
        android:hint="@string/login_msg_password_txt" />

    <ImageView
        android:id="@+id/login_clear_password_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_msg_password_txt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_clear_btn"
        android:clickable="true"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/login_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_login_press_btn"
            android:text="@string/login_register_txt"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/selector_login_press_btn"
            android:text="@string/login_login_txt"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/login_save_checkbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_ly"
        android:layout_marginLeft="15dp"
        android:text="@string/login_remember_txt"
        android:checked="true"
        android:textColor="#23238E"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_msg_fail_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_ly"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_msg_fail_txt"
        android:textColor="#23238E"
        android:visibility="invisible"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_msg_help_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_ly"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_msg_help_txt"
        android:textColor="#23238E"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_msg_show_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="beer talk Connect"
        android:textColor="#23238E"
        android:textSize="14sp" />
</RelativeLayout>