<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/register_phone_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/login_msg_phone_txt"
        android:textColor="@color/text_color_black"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/register_phone_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/register_phone_hint_txt"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/register_phone_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number_edit"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_phone_code_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="请输入验证码"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/register_phone_code_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_login_press_btn"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/register_get_code_txt"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/register_msg_user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_ly"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/login_username_txt"
        android:textColor="@color/text_color_black"
        android:textSize="18sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/register_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_ly"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/login_msg_username_txt"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/register_msg_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_edit"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:text="@string/login_password_btx"
        android:textColor="@color/text_color_black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/register_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_edit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:hint="@string/login_msg_password_txt"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:paddingLeft="70dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_edit"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_login_press_btn"
        android:text="注册"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>


</RelativeLayout>