<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/home_help_txt"
        android:textSize="24sp"
        android:textColor="@color/text_color_black"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_code_click_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/home_scan_code_icon"
            android:gravity="center"
            android:text="扫条码查询"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/home_speech_click_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/home_voice_icon"
            android:gravity="center"
            android:text="语音查询"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_normal_border"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:textColor="@color/text_color_black"
        android:text="@string/home_guid_mode_txt"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/home_edit_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_weight="2"
            android:background="@drawable/shape_normal_border"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/home_search_btn"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_border_radius_btn"
            android:text="@string/home_search_txt"/>
    </LinearLayout>

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/text_color_black"
        android:text="我们拥有全球3000多种酒类信息\n\n带你进入酒类世界"
        android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>